--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.17.1",
+    "i18next": "^19.6.3",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-firestore": "^1.0.1",
+    "react-i18next": "^11.7.0",
+    "react-intl": "^5.4.1",
+    "react-materialize": "^3.9.2",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.6.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
