--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-date-picker": "^8.0.1",
     "react-dom": "^16.13.1",
+    "react-firebase-file-uploader": "^2.4.3",
     "react-firestore": "^1.0.1",
     "react-i18next": "^11.7.0",
     "react-intl": "^5.4.1",
