--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.17.1",
+    "gh-pages": "^3.1.0",
     "i18next": "^19.6.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
