--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ntnuipadling",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mmshabab90.github.io/ntnuipadling/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -28,9 +29,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
