--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "firebase": "^7.17.1",
     "gh-pages": "^3.1.0",
     "i18next": "^19.6.3",
+    "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-date-picker": "^8.0.1",
+    "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-firebase-file-uploader": "^2.4.3",
     "react-firestore": "^1.0.1",
@@ -21,7 +24,7 @@
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.6.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-firestore": "^0.13.0",
     "redux-thunk": "^2.3.0"
